[package]
name = "mimix"
version = "0.1.0"
edition = "2021"
authors = ["Emmie He <heemmie@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"  # for serial port

# disable unwinding (related to language item eh_personality)
[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# allow exiting QEMU from the guest system
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)
